fail_crate/tests/const_and_into.stderr
error: `into` cannot be used in constant constructors.
 --> fail_crate/tests/const_and_into.rs:6:11
  |
6 |     #[new(into)]
  |           ^^^^
